# signatory

./: .gitignore  CHANGES.md  Cargo.toml  LICENSE-MIT  README.md
.circleci/: Dockerfile  config.yml
.github/workflows/: rust.yml
benches/: dalek.rs  ed25519.rs  ring.rs  secp256k1.rs  sodiumoxide.rs
providers/signatory-dalek/: Cargo.toml  README.md
providers/signatory-dalek/benches/: ed25519.rs
providers/signatory-dalek/src/: lib.rs
providers/signatory-ledger-cosval/: Cargo.toml  README.md
providers/signatory-ledger-cosval/src/: lib.rs
providers/signatory-ring/: Cargo.toml  README.md
providers/signatory-ring/benches/: ecdsa.rs  ed25519.rs
providers/signatory-ring/src/: ecdsa.rs  ed25519.rs  error.rs  lib.rs
providers/signatory-ring/src/ecdsa/: mod.rs  p256.rs  p384.rs  signer.rs
providers/signatory-secp256k1/: Cargo.toml  README.md
providers/signatory-secp256k1/benches/: ecdsa.rs
providers/signatory-secp256k1/src/: lib.rs
providers/signatory-sodiumoxide/: Cargo.toml  README.md
providers/signatory-sodiumoxide/benches/: ed25519.rs
providers/signatory-sodiumoxide/src/: lib.rs
providers/signatory-yubihsm/: Cargo.toml  README.md
providers/signatory-yubihsm/src/: ecdsa.rs  ed25519.rs  error.rs  lib.rs  session.rs
providers/signatory-yubihsm/tests/: ecdsa.rs  ed25519.rs
providers/signatory-yubihsm/tests/support/: mod.rs
signatory-dalek/: Cargo.toml  README.md
signatory-dalek/benches/: ed25519.rs
signatory-dalek/src/: lib.rs
signatory-ledger-cosval/: Cargo.toml  README.md
signatory-ledger-cosval/src/: lib.rs
signatory-ledger-tm/: Cargo.toml  README.md
signatory-ledger-tm/benches/: ed25519.rs
signatory-ledger-tm/src/: ledgertm.rs  lib.rs  signer.rs
signatory-ring/: Cargo.toml  README.md
signatory-ring/benches/: ecdsa.rs  ed25519.rs
signatory-ring/src/: ecdsa.rs  ed25519.rs  lib.rs
signatory-ring/src/ecdsa/: p256.rs  p384.rs  signer.rs
signatory-secp256k1/: Cargo.toml  README.md
signatory-secp256k1/benches/: ecdsa.rs
signatory-secp256k1/src/: lib.rs
signatory-sodiumoxide/: Cargo.toml  README.md
signatory-sodiumoxide/benches/: ed25519.rs
signatory-sodiumoxide/src/: lib.rs
signatory-yubihsm/: Cargo.toml
signatory-yubihsm/src/: ecdsa.rs  lib.rs  session.rs
signatory-yubihsm/tests/: ecdsa.rs
signatory-yubihsm/tests/support/: mod.rs
src/: asn1.rs  digest.rs  ecdsa.rs  ed25519.rs  encoding.rs  error.rs  lib.rs  macros.rs  pkcs8.rs  prelude.rs  public_key.rs  signature.rs  test_vector.rs  util.rs
src/curve/: mod.rs  point.rs
src/curve/nistp256/: mod.rs  test_vectors.rs
src/curve/nistp384/: mod.rs  test_vectors.rs
src/curve/secp256k1/: mod.rs
src/ecdsa/: curve.rs  digest.rs  mod.rs  public_key.rs  secret_key.rs  signature.rs  signer.rs  verifier.rs
src/ecdsa/curve/: macros.rs  mod.rs  nistp256.rs  nistp384.rs  point.rs  secp256k1.rs
src/ecdsa/curve/nistp256/: mod.rs  test_vectors.rs
src/ecdsa/curve/nistp384/: mod.rs  test_vectors.rs
src/ecdsa/curve/secp256k1/: mod.rs  test_vectors.rs
src/ecdsa/signature/: asn1.rs  der.rs  fixed.rs  mod.rs  pair.rs  raw.rs  scalars.rs
src/ecdsa/signer/: digest.rs  mod.rs  raw_digest.rs  sha256.rs
src/ecdsa/verifier/: digest.rs  mod.rs  raw_digest.rs  sha2.rs  sha256.rs
src/ed25519/: dalek.rs  digest.rs  mod.rs  public_key.rs  seed.rs  signature.rs  signer.rs  test_macros.rs  test_vectors.rs  verifier.rs  yubihsm.rs
src/encoding/: asn1.rs  base64.rs  decode.rs  encode.rs  error.rs  hex.rs  macros.rs  mod.rs  pkcs8.rs
src/providers/: dalek.rs  mod.rs  ring.rs  sodiumoxide.rs  yubihsm.rs
src/providers/dalek/: ed25519.rs  mod.rs
src/providers/ring/: ecdsa.rs  ed25519.rs  mod.rs
src/providers/secp256k1/: ecdsa.rs  mod.rs
src/providers/sodiumoxide/: ed25519.rs  mod.rs
src/providers/yubihsm/: ecdsa.rs  ed25519.rs  mod.rs
src/signer/: bytes.rs  digest.rs  mod.rs  sha2.rs
src/test_vector/: mod.rs  pkcs8.rs
src/verifier/: bytes.rs  digest.rs  mod.rs  sha2.rs
yubihsm-sys/: Cargo.toml  README.md  build.rs
