[package]
name        = "signatory"
description = "Multi-provider elliptic curve digital signature library with ECDSA and Ed25519 support"
version     = "0.9.4" # Also update html_root_url in lib.rs when bumping this
license     = "Apache-2.0 OR MIT"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
homepage    = "https://github.com/tendermint/signatory"
repository  = "https://github.com/tendermint/signatory/tree/master"
readme      = "README.md"
categories  = ["authentication", "cryptography", "no-std"]
keywords    = ["cryptography", "ecdsa", "ed25519", "signing", "signatures"]
autobenches = false

[badges]
circle-ci = { repository = "tendermint/signatory" }

[dependencies]
digest = { version = "0.7", optional = true, default-features = false }
generic-array = { version = "0.9", optional = true }
rand = { version = "0.5", optional = true, default-features = false }
sha2 = { version = "0.7", optional = true, default-features = false }
subtle-encoding = { version = "0.2", optional = true, default-features = false, features = ["base64", "hex"] }
zeroize = { version = "0.3", optional = true }

[features]
alloc = []
default = ["encoding", "rand", "std"]
ecdsa = ["generic-array", "zeroize"]
ed25519 = ["zeroize"]
encoding = ["subtle-encoding", "zeroize"]
nightly = ["alloc", "zeroize/nightly"]
pkcs8 = ["encoding"]
std = ["alloc", "rand/std", "subtle-encoding/std"]
test-vectors = []

[workspace]
members = [
    "providers/signatory-dalek",
    "providers/signatory-ledger-cosval",
    "providers/signatory-ring",
    "providers/signatory-secp256k1",
    "providers/signatory-sodiumoxide",
    "providers/signatory-yubihsm",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[package.metadata.docs.rs]
features = ["digest", "ecdsa", "ed25519", "pkcs8", "sha2"]
