[package]
name        = "signatory"
description = "Multi-provider elliptic curve digital signature library with ECDSA and Ed25519 support"
version     = "0.13.0" # Also update html_root_url in lib.rs when bumping this
license     = "Apache-2.0 OR MIT"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
homepage    = "https://github.com/tendermint/signatory"
repository  = "https://github.com/tendermint/signatory/tree/develop"
readme      = "README.md"
categories  = ["authentication", "cryptography", "no-std"]
keywords    = ["cryptography", "ecdsa", "ed25519", "signing", "signatures"]
edition     = "2018"
autobenches = false

[badges]
circle-ci = { repository = "tendermint/signatory", branch = "develop" }
maintenance = { status = "passively-maintained" }

[dependencies]
ed25519 = { version = "0.2", optional = true, default-features = false }
generic-array = { version = "0.12", optional = true, default-features = false }
getrandom = { version = "0.1", optional = true, default-features = false }
sha2 = { version = "0.8", optional = true, default-features = false }
signature = { version = "0.3", default-features = false }
zeroize = { version = "1.0.0-pre", default-features = false }

[dependencies.subtle-encoding]
version = "0.4"
optional = true
default-features = false
features = ["base64", "hex"]

[features]
alloc = []
default = ["encoding", "getrandom", "std"]
digest = ["signature/digest"]
ecdsa = ["generic-array"]
encoding = ["subtle-encoding"]
pkcs8 = ["encoding"]
std = ["alloc", "signature/std", "subtle-encoding/std"]
test-vectors = []

[workspace]
members = [
    "signatory-dalek",
    "signatory-ledger-tm",
    "signatory-ring",
    "signatory-secp256k1",
    "signatory-sodiumoxide",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
