[package]
name        = "signatory-ledger-cosval"
description = "Signatory provider for ledger cosmos validator app"
version     = "0.10.0" # Also update html_root_url in lib.rs when bumping this
license     = "Apache-2.0 OR MIT"
authors     = ["ZondaX GmbH <info@zondax.ch>"]
homepage    = "https://github.com/tendermint/signatory"
repository  = "https://github.com/tendermint/signatory/tree/master/providers/signatory-ledger-cosval/"
readme      = "README.md"
categories  = ["authentication", "cryptography", "no-std"]
keywords    = ["cosmos", "ed25519", "signatures", "tendermint", "validator"]
edition     = "2018"

[badges]
circle-ci = { repository = "tendermint/signatory" }

[dependencies]
lazy_static = "1"
ledger-cosmos = "0.2.0"
libc = "0.2"

[dependencies.signatory]
version = "0.10"
features = ["digest", "ed25519", "generic-array", "test-vectors"]
path = ".."

[dev-dependencies]
criterion = "0.2"
