[package]
name        = "signatory-ledger-tm"
description = "Signatory provider for Ledger Tendermint Validator app"
version     = "0.19.1" # Also update html_root_url in lib.rs when bumping this
license     = "Apache-2.0 OR MIT"
authors     = ["ZondaX GmbH <info@zondax.ch>"]
homepage    = "https://github.com/ZondaX/ledger-tendermint-rs"
repository  = "https://github.com/iqlusioninc/signatory/tree/develop/providers/signatory-ledger-tm/"
readme      = "README.md"
categories  = ["authentication", "cryptography", "no-std"]
keywords    = ["cosmos", "ed25519", "signatures", "tendermint", "validator"]
edition     = "2018"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
byteorder = "1.3.1"
ledger = "0.2.5"
matches = "0.1.8"
thiserror = "1"

[dependencies.signatory]
version = "0.19"
features = ["digest", "ed25519"]
path = ".."

[dev-dependencies]
ed25519-dalek = "1.0.0-pre.2"
lazy_static = "1.2.0"
sha2 = "0.8.0"
criterion = "0.3"

[[bench]]
name = "ed25519"
harness = false
