[package]
name        = "signatory-secp256k1"
description = "Signatory ECDSA provider for secp256k1-rs"
version     = "0.9.0-alpha3" # Also update html_root_url in lib.rs when bumping this
license     = "MIT OR Apache-2.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
homepage    = "https://github.com/tendermint/signatory"
repository  = "https://github.com/tendermint/signatory/tree/master/providers/signatory-secp256k1/"
readme      = "README.md"
categories  = ["authentication", "cryptography", "no-std"]
keywords    = ["cryptography", "bitcoin", "ecdsa", "secp256k1", "signatures"]

[badges]
circle-ci = { repository = "tendermint/signatory" }

[dependencies]
lazy_static = "1"
secp256k1 = "0.11"

[dependencies.signatory]
version = "0.9.0-alpha3"
features = ["digest", "ecdsa", "sha2", "test-vectors"]
path = "../.."

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "ecdsa"
harness = false
